Imports chapters and verses

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <div id="header">
         <div id="centerhead">
-            <div id="title">The Scriptures, Mapped</div>
-            <div id="subtitle">By Tyler P. Smith</div>
+            <div class="title">The Scriptures, Mapped</div>
+            <div class="subtitle">By Tyler P. Smith</div>
         </div>
     </div>
     <div id="content">
