Project 2 CSS additions

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         </div>
     </div>
     <div id="content">
-        <div id="scriptures"></div>
+        <div id="scriptures">
+            <div id="scripNav1"></div>
+            <div id="scripNav2"></div>
+        </div>
         <div id="map"></div>
     </div>
 
