Deletes example file

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
     <div id="content">
         <div id="scriptures">
-            <div id="scripNav1"></div>
-            <div id="scripNav2"></div>
+            <div id="scripnav1"></div>
+            <div id="scripnav2"></div>
         </div>
         <div id="map"></div>
     </div>
